# n-sql

./: .gitignore  .travis.yml  Cargo.toml  README.md  README_zh_CN.md
docs/contents/: README.md  _sidebar.md  functions.md  playground.md
docs/contents/zh-CN/: _sidebar.md  functions.md  playground.md
docs/playground/assets/n-sql/: README.md  n_sql.js  n_sql_bg.d.ts  n_sql_bg.wasm
grammars/: grammar.lalrpop
sql-editor/: README.md  package-lock.json  package.json
src/: catalog.rs  grammar.rs  lib.rs  parser.rs  wasm.rs  wasm_utils.rs
src/ast/: mod.rs
src/ast/catalog/: data_type.rs  datum.rs
src/ast/expression/: mod.rs
src/ast/expression/predicate_expression/: between_expression.rs  in_expression.rs  like_expression.rs  mod.rs
src/ast/expression/scalar_expression/: arithmetic_expression.rs  mod.rs  (+3 more)
src/ast/statement/: join_node.rs  mod.rs  pagination_statement.rs  select_statement.rs  set_statement.rs  table_view.rs
src/generator/: mod.rs  mysql.rs  oracle.rs  pgsql.rs  sql_server.rs  sqlite.rs  visitor.rs
src/lexer/: mod.rs  token.rs
src/optimizer/: mod.rs
tests/: advanced.rs  advanced_fn.rs  aggregate.rs  aggregate_fn.rs  arithmetic.rs  case_when.rs  cast_fn.rs  common.rs  comparison.rs  constant_expression.rs  datetime.rs  datetime_fn.rs  in_expression.rs  intersect_statement.rs  logical_expression.rs  minus_statement.rs  misc.rs  not_expression.rs  null_expression.rs  numeric.rs  numeric_fn.rs  pagination.rs  predicate_expression.rs  select_statement.rs  statement.rs  string.rs  string_fn.rs  test_example.rs  union_statement.rs  variable.rs
(+48 files in other folders)
